# tinyusdz-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
examples/: dump_hierarchy.rs  parse_usdz.rs  usd_to_glb.rs
src/: attribute.rs  error.rs  lib.rs  material.rs  mesh.rs  prim.rs  stage.rs  value.rs
tinyusdz-sys/: Cargo.toml  build.rs  wrapper.h
tinyusdz-sys/src/: lib.rs
